[package]
name = "build-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = { version = "1.0", features = ["derive"] }
grass = "0.10"
clap = "2"
fs_extra = "1.3"
pulldown-cmark = { version = "0.9", features = ["simd"] }
walkdir = "2"
serde_yaml = "0.8"
chrono = "0.4"
slug = "0.1"
syntect = "5"
